--- a/AZ_Quiz/AZ_Quiz.csproj
+++ b/AZ_Quiz/AZ_Quiz.csproj
@@ -6,11 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
-    <ApplicationIcon>AZ-Quiz-icon.ico</ApplicationIcon>
+    <ApplicationIcon>AZQuiz-icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="AZ-Quiz-icon.ico" />
+    <Content Include="AZQuiz-icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
